Fix spacing of text fields in the review dialog.
This change fixes the margin/padding of the inline editor fields in the review
dialog so that they don't jump when opening or closing the editors.

Testing done:
Created some comments, a header, and a footer, and opened/closed editors a
bunch.

Reviewed at https://reviews.reviewboard.org/r/8500/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -1158,6 +1158,11 @@
 
     pre {
       white-space: pre-wrap;
+
+      &.rich-text {
+        margin: @textarea-editor-margin;
+        padding: @textarea-editor-padding + @textarea-border-size;
+      }
     }
 
     .spinner {
